--- a/style.css
+++ b/style.css
@@ -5,9 +5,12 @@ body {
 }
 
 #page {
+    box-sizing: border-box;
     width: 800px;
     padding: 24px;
     background-color: #F0E8C2;
+    border-radius: 24px;
+    margin: 48px auto;
 }
 
 
