--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 :root {
     
   font-family: "Alice", serif;
@@ -28,9 +33,24 @@ img {
        
 }
 
+main{
+    padding: 24px;
+}
+
+section + section {
+    margin-top: 24px;
+}
+
+#about p + p {
+    margin-top: 12px;
+}
+
+
+
 h1 {
     line-height: 140%;
     font-size: 40px;
+    margin-bottom: 4px;
 }
 
 h2{
@@ -39,5 +59,11 @@ h2{
 
 h1, h2 {
     color: #291B1A;
+    margin-bottom: 4px;
+    line-height: 150%;
 }
 
+
+ul {
+    padding-left: 24px;
+}
