--- a/style.css
+++ b/style.css
@@ -67,3 +67,11 @@ h1, h2 {
 ul {
     padding-left: 24px;
 }
+
+footer {
+    color: #F0E8C2;
+    text-align: center;
+    padding-bottom: 50px;
+    font-size: 25px;
+    
+}
